Revert "Update wording, align page titles, fix build pipeline and vercel config"
This reverts commit 69eabb545f0aff2460e16ca681b927513ccea1eb.

--- a/styles.css
+++ b/styles.css
@@ -47,9 +47,8 @@ html.loaded body { visibility: visible; }
   min-height: 100svh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
-.first-section h1 { text-align: left; }
 
 img { display:block; max-width:100%; }
 
